<resources>
    <string name="app_name">Taxi Geo</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_description">To Stay Connected With Us\nPlease Login With Your Personal Informations</string>
    <string name="welcome">Welcome</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo_description">App Logo</string>
    <string name="cab_admin_panel">Cab Admin Panel</string>
    <string name="view_bookings">View Bookings</string>
    <string name="manage_drivers">Manage Drivers</string>
    <string name="nav_home">Home</string>
    <string name="ride_request">Ride Request</string>
    <string name="all_rides">Rides</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="home_fragment_text">Home Fragment</string>
    <string name="profile_fragment_text">Profile Fragment</string>
    <string name="settings_fragment_text">Settings Fragment</string>
</resources>